<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="connexion_activity_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="loginFacebook">Sign in with Facebook</string>
    <string name="loginGoogle">Sign in with Google</string>
    <string name="nav_drawer_menu_lunch">YOUR LUNCH</string>
    <string name="nav_drawer_menu_settings">SETTINGS</string>
    <string name="nav_drawer_menu_favorites">FAVORITES</string>
    <string name="nav_drawer_menu_logout">LOGOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_adress">lastname.firstname@gmail.com</string>
    <string name="Notification_activity_Title">Your Lunch</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">Your lunchtime</string>
    <string name="notification_message_text">For lunch, you eat at the restaurant %1$s located %2$s.</string>
    <string name="notification_message_workmates">Here is the list of workmates who will be eating with you: %1$s %2$s</string>
    <string name="notification_message_no_workmates_with_you">No workmates are coming to lunch with you at the moment</string>
    <string name="notification_message_text_app">For lunch, you eat at the restaurant %1$s located %2$s with %3$s</string>
    <string name="notification_message_workmates_normal_mode">You are in normal mode, you can\'t see your colleagues</string>
    <string name="notification_message_short">Find the details of the information concerning your lunch</string>
    <string name="toolbar_title_notification_activity">Notification</string>
    <string name="toolbar_title_favorites_activity">Favorites restaurants</string>
    <string name="info_no_restaurant_name_found">No restaurant</string>
    <string name="info_no_restaurant_adresse_found">No restaurant address</string>
    <string name="notification_enable">Enable notifications (every lunchtime)</string>
    <string name="notification_btn_see_choice">SEE MY CHOICE</string>
    <string name="notifications_settings">NOTIFICATIONS SETTINGS</string>
    <string name="votre_repas_ce_midi">YOUR LUNCH</string>
    <string name="notification_enabling">Notifications enabling</string>
    <string name="notification_desabling">Notification desabling</string>
    <string name="error_authentication_canceled">Authentication cancelled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="button_login_text_logged">View profile</string>
    <string name="button_login_text_not_logged">Login</string>
    <string name="Profile_Activity_Title">Settings</string>
    <string name="toolbar_title_login_activity">Your profile</string>
    <string name="text_input_firstname">Firstname</string>
    <string name="text_input_lastname">Lastname</string>
    <string name="text_view_email">Email address :</string>
    <string name="text_view_job_name">Job Name :</string>
    <string name="text_view_job_address">Job address :</string>
    <string name="text_view_job_place_id">Job Place id :</string>
    <string name="button_update_account">Update the information</string>
    <string name="update_confirmation">Updated information</string>
    <string name="button_delete_account">Delete my account</string>
    <string name="info_no_email_found">No email address</string>
    <string name="info_no_firstname_found">No first name</string>
    <string name="info_no_lastname_found">No last name</string>
    <string name="info_no_job_name_found">No job name</string>
    <string name="info_no_job_address_found">No job address</string>
    <string name="info_no_job_place_id_found">No job place id</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="popup_message_choice_OK">OK</string>
    <string name="user_settings">USER INFORMATIONS</string>
    <string name="profile_activity_changing_work">You are about to change your workplace. Attention! If you do, you will lose all your current favorite restaurants and you will no longer see your current colleagues.</string>
    <string name="profile_activity_confirm_changing_work">I CONFIRM</string>
    <string name="profile_activity_successfull_work_changement">Your change of job is successful</string>
    <string name="toolbar_title_restaurant_activity">I\'m Hungry!</string>
    <string name="toolbar_title_people_fragment">Available Workmates</string>
    <string name="Enter_restaurant_name">Enter a restaurant name</string>
    <string name="restaurant_activity_autocomplete_no_near_you">Your search does not match a place near you, do you still want to see the details of that place?</string>
    <string name="Restaurant_activity_press_clear_button">Please, press clear button</string>
    <string name="restaurant_activity_autocomplete_no_restaurant">Your search is not a restaurant, please you can only access to restaurant informations</string>
    <string name="fragment_listview_item_image">restaurant image</string>
    <string name="fragment_listview_item_restaurant_name">Restaurant name</string>
    <string name="fragment_listview_item_restaurant_type">Food</string>
    <string name="fragment_listview_item_distance">Distance</string>
    <string name="fragment_listview_item_restaurant_open_information">Open until</string>
    <string name="fragment_listview_item_restaurant_adress">restaurant address</string>
    <string name="fragment_listview_item_restaurant_number_rates">(2)</string>
    <string name="fragment_listview_item_dot">·</string>
    <string name="opening_hours_midnight">Open until midnight</string>
    <string name="closed_restaurant">Closed</string>
    <string name="workmates_in_restaurant" translatable="false">( %d )</string>
    <string name="open_hours_text">Opening to %1dh%2d</string>
    <string name="open_hours_until">Open until %1dh%2d</string>
    <string name="open_hours_text_no_minutes">Opening to %dh</string>
    <string name="open_hours_until_no_minutes">Open until %dh</string>
    <string name="distance_text_meter" translatable="false">%1$s m</string>
    <string name="distance_text_km" translatable="false">%1$s km</string>
    <string name="no_opened_hours">No schedule for this day !</string>
    <string name="fragment_people_item_image">Workmates image</string>
    <string name="fragment_people_item_text">Alex is eating Turkish (Snack Ender)</string>
    <string name="workmates_text_choice">" %1$s is eating in restaurant %2$s"</string>
    <string name="workmates_text_joining">" %1$s is joining"</string>
    <string name="workmates_text_no_choice">%1$s hasn\'t decided yet!</string>
    <string name="workmates_no_showed_normal_mode">You are in NORMAL MODE, pass in WORK MODE to show your workmates</string>
    <string name="restaurant_choosen">The restaurant has been well chosen</string>
    <string name="is_choosen_restaurant">Choice of restaurant</string>
    <string name="alert_dialog_view_activity">Are you sure you want to change to eat at the restaurant %1$s?</string>
    <string name="alert_dialog_view_activity_no_choice_yet">Are you sure you don\'t want to eat here anymore?</string>
    <string name="restaurant_no_choosen">You have not yet chosen a restaurant</string>
    <string name="no_phone_number">No phone number for this restaurant</string>
    <string name="no_website">No website for this restaurant</string>
    <string name="notification_message_no_workmates_here">No workmates here for the moment</string>
    <string name="view_place_call_image_text">CALL</string>
    <string name="view_place_like_image_text">LIKE</string>
    <string name="view_place_webste_image_text">WEBSITE</string>
    <string name="changeButtonColor_Yellow" translatable="false">#FFFF00</string>
    <string name="changeButtonColor_Orange" translatable="false">#FF5722</string>
    <string name="toolbar_name_permission_activity">Permission granted</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="granted_text">Go4Lunch needs permission to access device location to provide required services. Please allow the permission</string>
    <string name="granted_title">Permission Request</string>
    <string name="toolbar_title_permission_activity">Permissions</string>
    <string name="job_address_question">Where are you working ?</string>
    <string name="choose_place">Choose a place</string>
    <string name="valider">CONFIRM</string>
    <string name="toolbar_title_find_job_address_activity">Find your job address</string>
    <string name="search_hint">Search…</string>
    <string name="par_defaut">Default</string>
    <string name="clear_hint">Clear</string>
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_people">Workmates</string>
    <string name="facebook_application_id" translatable="false">2021492718158615</string>
    <string name="facebook_login_protocol_scheme" translatable="false"
        tools:ignore="UnusedResources">fb2021492718158615</string>
    <string name="fullscreen_dialog_sort_out_text">SORT OUT</string>
    <string name="fullscreen_dialog_page_title">Find YOUR restaurant !</string>
    <string name="fullscreen_dialog__by_rating">Minimum Rating</string>
    <string name="fullscreen_dialog__by_open_for_lunch">Open ?</string>
    <string name="fullscreen_dialog__by_opening_hours_close">Close hours</string>
    <string name="fullscreen_dialog__by_distance_from_me">Distance from me (m) </string>
    <string name="fullscreen_dialog__by_workmates_in">Number of workmates in</string>
    <string name="fullscreen_dialog__value">VALUE</string>
    <string name="fullscreen_dialog__value_in_meter" translatable="false">%d m</string>
    <string name="fullscreen_dialog__value_in_hours" translatable="false">%d h</string>
    <string name="fullscreen_dialog__value_workmate_in" translatable="false">%d</string>
    <string name="fullscreen_dialog_sort_name">SORT</string>
    <string name="image_content_description">Image description</string>
    <string name="permission_acces_location_fine_rationale">We need to access your location to find restaurants near you</string>
    <string name="permission_acces_location_fine_never_ask_again">You asked that your location no longer be accessed. The application cannot function properly without it.</string>
    <string name="permission_acces_location_fine_denied">You have decided not to allow access to your location. Restaurants cannot be found at this time.</string>
    <string name="permission_button_allow">ALLOW</string>
    <string name="permission_button_deny">DENY</string>
    <string name="alert_dialog_location_far_from_works_text">You are too far from your works, do you want to pass in normal mode and be located?</string>
    <string name="alert_dialog_location_far_from_works_pos_button">YES, LEAVE WORK MODE</string>
    <string name="alert_dialog_location_far_from_works_neg_button">NO</string>
    <string name="no_restaurant_found">No restaurant found</string>
    <string name="app_mode_work" translatable="false">work</string>
    <string name="app_mode_normal" translatable="false">normal</string>
    <string name="app_mode_forced_work" translatable="false">forced work</string>
    <string name="app_mode_change_to_work_mode">Work mode activated</string>
</resources>