<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.inved.go4lunch.auth.ProfileActivity">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@color/colorPrimaryLight"
            android:gravity="center">

            <!-- GO4LLUNCH IMAGE -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_logo_appli" />


            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="170dp"
                app:srcCompat="@drawable/ic_anon_user_48dp" />

        </LinearLayout>

        <!-- USER PARAMETER TITLE-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:text="@string/user_settings" />

        <!-- PROFILE USERNAME -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_activity_edit_text_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/text_input_firstname"
            android:textSize="@dimen/default_text_size" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_activity_edit_text_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/text_input_lastname"
            android:textSize="@dimen/default_text_size" />

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>


    </LinearLayout>

    <!-- NOTIFICATION CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <!-- NOTIFICATION TITLE-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:text="@string/notifications_settings" />

        <!--SWITCH -->
        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:shadowColor="@color/blackColor"
            android:text="@string/notification_enable" />

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="bottom"
        android:orientation="vertical">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/profile_activity_button_update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_large_margin"
            android:layout_marginEnd="@dimen/default_large_margin"
            android:background="@drawable/button_radius_primary_color"

            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />


        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/profile_activity_button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</LinearLayout>
