<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".controller.activity.PermissionActivity"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_go4lunch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/granted_title"
            android:textSize="24sp"
            android:textColor="@color/whiteColor"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/whiteColor"
            android:layout_marginTop="36dp"
            android:text="@string/granted_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_permission_btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/grant_permission"
        android:textAllCaps="false" />

</RelativeLayout>