<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_favorite_listview_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dip">

    <ImageView
        android:id="@+id/activity_favorite_listview_item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fragment_listview_item_image"
        app:srcCompat="?attr/actionModeSplitBackground"
        />

    <TextView
        android:id="@+id/activity_favorite_listview_item_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_listview_item_restaurant_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/activity_favorite_listview_item_restaurant_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/fragment_listview_item_restaurant_adress"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/activity_favorite_listview_item_restaurant_name"
        app:layout_constraintLeft_toLeftOf="@id/activity_favorite_listview_item_restaurant_name"
        app:layout_constraintRight_toLeftOf="@id/activity_favorite_listview_item_image"
        android:layout_marginEnd="@dimen/default_margin"
        />




</androidx.constraintlayout.widget.ConstraintLayout>